[gd_scene load_steps=12 format=3 uid="uid://fvdy78a8w0s0"]

[ext_resource type="Texture2D" uid="uid://cdsarnaoehwwt" path="res://icon.svg" id="1_m1htj"]
[ext_resource type="Script" uid="uid://bqwnq55bti0xx" path="res://Source/Enemies/enemy.gd" id="1_wovta"]
[ext_resource type="Shape2D" uid="uid://dlkmwb7wrq8ru" path="res://Data/Enemies/enemy_collision_shape.tres" id="2_0o0ue"]
[ext_resource type="Script" uid="uid://bkp8l73petd6g" path="res://Source/Enemies/StateMachine/enemy_state_machine.gd" id="3_6bs3c"]
[ext_resource type="Script" uid="uid://dlt1yokcom10t" path="res://Source/Enemies/StateMachine/idle.gd" id="4_uoxpr"]
[ext_resource type="Script" uid="uid://bvqqkiayt74ow" path="res://Source/Enemies/StateMachine/chasing.gd" id="5_idouy"]
[ext_resource type="Script" uid="uid://dwu5by0ml7jn1" path="res://Source/Enemies/StateMachine/fleeing.gd" id="6_0o0ue"]
[ext_resource type="Script" uid="uid://bgse36nhnlkks" path="res://Source/Enemies/StateMachine/attacking.gd" id="7_6s1gy"]
[ext_resource type="Script" uid="uid://do222lj53766q" path="res://Source/Components/player_detector.gd" id="8_uoxpr"]
[ext_resource type="Script" uid="uid://dp4w212aij0sp" path="res://Source/Components/health.gd" id="9_idouy"]
[ext_resource type="Script" uid="uid://bcceqc2f8hmnr" path="res://Source/Components/hurtbox.gd" id="11_6s1gy"]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_wovta")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource("2_0o0ue")

[node name="Pivot" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
scale = Vector2(0.125, 0.125)
texture = ExtResource("1_m1htj")

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_6bs3c")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://bkp8l73petd6g"

[node name="Idle" type="Node" parent="EnemyStateMachine"]
script = ExtResource("4_uoxpr")

[node name="Chasing" type="Node" parent="EnemyStateMachine"]
script = ExtResource("5_idouy")

[node name="Fleeing" type="Node" parent="EnemyStateMachine"]
script = ExtResource("6_0o0ue")

[node name="Attacking" type="Node" parent="EnemyStateMachine"]
script = ExtResource("7_6s1gy")

[node name="ChaseRange" type="Area2D" parent="."]
unique_name_in_owner = true
script = ExtResource("8_uoxpr")
radius = 100.0
metadata/_custom_type_script = "uid://do222lj53766q"

[node name="AttackRange" type="Area2D" parent="."]
unique_name_in_owner = true
script = ExtResource("8_uoxpr")
metadata/_custom_type_script = "uid://do222lj53766q"

[node name="FleeRange" type="Area2D" parent="."]
unique_name_in_owner = true
script = ExtResource("8_uoxpr")
radius = 10.0
metadata/_custom_type_script = "uid://do222lj53766q"

[node name="Health" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_idouy")
maxHealth = 5.0
metadata/_custom_type_script = "uid://dp4w212aij0sp"

[node name="Hurtbox" type="Area2D" parent="."]
unique_name_in_owner = true
script = ExtResource("11_6s1gy")
metadata/_custom_type_script = "uid://bcceqc2f8hmnr"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = ExtResource("2_0o0ue")
